--- a/Tipsneu.html
+++ b/Tipsneu.html
@@ -129,7 +129,7 @@
             habe ich auch Pflanzen aus der Sierra Nevada, die reinweiss ohne roten Fleck blühen.
             Sie sind hier völlig hart (es könnte sich um eine Hybride mit C. laurifolius
             handeln).
-            2014 bekam ich Pflanzen, die sowohl in Belaubung als auch Blüten C. ladanifer glichen, aber
+            2014 bekam ich Pflanzen von Herrn Dierßen, die sowohl in Belaubung als auch Blüten C. ladanifer glichen, aber
             sich in Bielefeld seit Jahren als völlig frosthart erwiesen hatten. Ich ziehe sie seitdem 
             erfolgreich ohne jeden Winterschutz. Nach meiner Auffassung handelt es sich um eine Hybride 
             zwischen C. ladanifer und C. laurifolius.
