--- a/Zistrosen.html
+++ b/Zistrosen.html
@@ -54,6 +54,31 @@
           </tr>
         </tbody>
       </table>
+       <table>
+      <tbody>
+        <tr>
+          <td bgcolor="#44AA00" height="230" valign="middle" width="200">
+            <p align="right" style="margin-left: 10px;"><img align="left" height="185" src=
+            "images/Cistus-ladanifer.JPG" width="200"></p>
+          </td>
+          <td bgcolor="#44AA00" height="200" valign="middle" width="250">
+            <p align="center"><font face="Arial" size="2">Cistus
+              ladanifer (linkes Bild) aus Spanien hat die prächtigsten Blüten aller Zistrosen.Es wurde oft in
+              Hybriden eingekreuzt, wobei sich die rotbraunen Flecken immer vererben. Obwohl 5 Winter ohne Schutz 
+              gut vertragen wurden, stelle ich immer zur Sicherheit auch eine Pflanze in das Kalthaus. Im Januar 2009 gab es draußen
+              schwere Schäden, 2012 starben alle ab. Samen setzen die Pflanzen bei mir im Gegensatz 
+              zur Natur nur ganz selten an. Seit 2014 ziehe ich Pflanzen, die genau wie C. ladanifer aussehen,
+              aber wohl Hybriden zwischen C. ladanifer und C. laurifolius sind (rechtes Bild). Sie scheinen völlig 
+              hart zu sein.
+             </font></p>
+          </td>
+          <td bgcolor="#44AA00" height="210" valign="middle" width="149">
+            <p align="left" style="margin-right: 10px;"><img align="right" height="190" src=
+            "images/Cistus-Hybride.JPG" width="200"></p>
+          </td>
+        </tr>
+      </tbody>
+    </table>
       <table>
         <tbody>
           <tr>
