--- a/andere_pflanzen.html
+++ b/andere_pflanzen.html
@@ -142,7 +142,7 @@
         <tr>
           <td bgcolor="#44AA00" height="200" style="margin-left: 10px;" valign=
           "middle&gt; &lt;p align=" width="173"><img align="left" height="355" src=
-          "images/Helichrysum retortoides8.jpg" width="300"></td>
+          "images/Helichrysum-retortoides.JPG" width="300"></td>
           <td bgcolor="#44AA00" height="200" valign="middle" width="327">Helichrysum retortoides ist hier kaum
           bekannt. Ich decke es im Winter mit einer Glasplatte als Schutz gegen Nässe ab. Der Wuchs ist gut, die Blüte 
           wunderschön.</td>
