--- a/Kalthauspflanzen.html
+++ b/Kalthauspflanzen.html
@@ -279,7 +279,8 @@
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="328">
             <p align="center" style="margin-left: 10px;"><font face="Arial" size="3">Crinodendron
-            hookerianum aus Chile wird in Südengland an geschützten Stellen bis zu 5m hoch. Die im
+            hookerianum aus Chile wird in Südengland an geschützten Stellen bis zu 5m hoch, lässt sich 
+            aber auch gut im Kübel halten. Die im
             Mai erscheinenden Blüten leuchten weithin. Der immergrüne Baum oder Strauch benötigt
             kalkfreie Erde und etwas Schatten.</font></p>
           </td>
