--- a/Schattenpflanzen.html
+++ b/Schattenpflanzen.html
@@ -153,7 +153,7 @@
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="163">
             <p align="right" style="margin-left: 10px;"><img align="left" height="196" src=
-            "images/Meconopsisblau2.jpg" width="233"></p>
+            "images/Meconopsis-blau2.jpg" width="233"></p>
           </td>
           <td bgcolor="#44AA00" height="200" valign="middle" width="250">
             <p align="center"><font face="Arial" size="2">Meconopsis betonicifolia leuchtet in 
@@ -317,7 +317,7 @@
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="200">
             <p align="right" style="margin-left: 10px;"><img align="left" height="197" src=
-            "images/Arisaema candidissimum1.JPG" width="230"></p>
+            "images/Arisaema-candidissimum1.JPG" width="230"></p>
           </td>
           <td bgcolor="#44AA00" height="200" valign="middle" width="250">
             <p align="center"><font face="Arial" size="2">Arisaema candidissimum (links) und Arisaema sikokianum
