--- a/Schattenpflanzen.html
+++ b/Schattenpflanzen.html
@@ -254,7 +254,7 @@
           <td bgcolor="#44AA00" height="200" valign="middle" width="250">
             <p align="center"><font face="Arial" size="2">Ranunculus ficaria ist ein gefürchtetes Unkraut. 
             Einige Züchtungen wie dieses R. `Ken Aslet` (links) oder ´Brazen Hussy` wachsen aber sehr moderat.
-            `Brazen Hussy`zeivhnet sich insbesondere durch die tiefbraunen Blätter aus.
+            `Brazen Hussy`zeichnet sich insbesondere durch die tiefbraunen Blätter aus.
             </font></p>
           </td>
           <td bgcolor="#44AA00" height="200" valign="middle" width="149">
@@ -316,8 +316,8 @@
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="200">
-            <p align="right" style="margin-left: 10px;"><img align="left" height="197" src=
-            "images/Arisaema-candidissimum1.JPG" width="230"></p>
+            <p align="right" style="margin-left: 10px;"><img align="left" height="250" src=
+            "images/Arisaema-candidissimum1.JPG" width="180"></p>
           </td>
           <td bgcolor="#44AA00" height="200" valign="middle" width="250">
             <p align="center"><font face="Arial" size="2">Arisaema candidissimum (links) und Arisaema sikokianum
@@ -325,8 +325,8 @@
             rosa.</font></p>
           </td>
           <td bgcolor="#44AA00" height="200" valign="middle" width="149">
-            <p align="left" style="margin-right: 10px;"><img align="right" height="190" src=
-            "images/Arisaema-sikokianum.jpg" width="238"></p>
+            <p align="left" style="margin-right: 10px;"><img align="right" height="250" src=
+            "images/Arisaema-sikokianum.JPG" width="180"></p>
           </td>
         </tr>
       </tbody>
