--- a/Schattenpflanzen.html
+++ b/Schattenpflanzen.html
@@ -321,7 +321,7 @@
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="200">
             <p align="right" style="margin-left: 10px;"><img align="left" height="200" src=
-            "images/Arisaema-candidissimum1.JPG" width="180"></p>
+            "images/Arisaema-candidissimum.jpg" width="180"></p>
           </td>
           <td bgcolor="#44AA00" height="200" valign="middle" width="250">
             <p align="center"><font face="Arial" size="2">Arisaema candidissimum (links) und Arisaema sikokianum
