--- a/Schattenpflanzen.html
+++ b/Schattenpflanzen.html
@@ -154,7 +154,7 @@
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="163">
-            <p align="right" style="margin-left: 10px;"><img align="left" height="220" src=
+            <p align="right" style="margin-left: 10px;"><img align="left" height="230" src=
             "images/Meconopsis-blau2.jpg" width="180"></p>
           </td>
           <td bgcolor="#44AA00" height="200" valign="middle" width="250">
@@ -307,7 +307,7 @@
           <td bgcolor="#44AA00" height="200" valign="middle" width="316">
             <p align="center" style="margin-left: 10px;"><font face="Arial" size="3">Cymbalaria
             pallida alba ist etwas größer als das bekannte Zymbelkraut C. muralis. Idealerweise
-            wächst es an einer scharrigen Quelle oder am Bachufer.</font></p>
+            wächst es an einer schattigen Quelle oder am Bachufer.</font></p>
           </td>
           <td bgcolor="#44AA00" height="143" valign="middle" width="240">
             <p align="left" style="margin-right: 10px;"><img align="right" height="223" src=
