--- a/androsace_und_daphne.html
+++ b/androsace_und_daphne.html
@@ -54,8 +54,8 @@
             füllen.</font></p>
           </td>
           <td bgcolor="#44AA00" height="200" valign="middle" width="184">
-            <p align="left" style="margin-right: 10px;"><img align="right" height="180" src=
-            "images/Androsace-lanuginosa.JPG" width="210"></p>
+            <p align="left" style="margin-right: 10px;"><img align="right" height="170" src=
+            "images/Androsace-leichtlinii.jpg" width="230"></p>
           </td>
         </tr>
       </tbody>
@@ -111,6 +111,40 @@
         </tr>
       </tbody>
     </table>
+    
+    <table>
+      <tbody>
+        <tr>
+          <td bgcolor="#44AA00" height="200" valign="middle" width="200">
+            <p align="right" style="margin-left: 10px;"><img align="left" height="190" src=
+            "images/Androsace-brigantiaca6.jpg" width="230"></p>
+          </td>
+          <td bgcolor="#44AA00" height="200" valign="middle" width="250">
+            <p align="center"><font face="Arial" size="2">Androsace carnea ssp. brigantiaca komt in den 
+            Südwestalpen vor und meidet Kalk. Androsace mathildae dagegen wächst in den
+            Abruzzen auf Kalk.</font></p>
+          </td>
+          <td bgcolor="#44AA00" height="200" valign="middle" width="179">
+            <p align="left" style="margin-right: 10px;"><img align="right" height="188" src=
+            "images/Androsace-mathildae5.jpg" width="220"></p>
+          </td>
+        </tr><table>
+      <tbody>
+        <tr>
+          <td bgcolor="#44AA00" height="200" valign="middle" width="316">
+            <p align="center" style="margin-left: 10px;"><font face="Arial" size="3">Androsace
+            hat ein weites Verbreitungsgebiet von den Pyrenäen bis zum Himalaja. Wächst meist auf Kalk.</font></p>
+          </td>
+          <td bgcolor="#44AA00" height="200" valign="middle" width="184">
+            <p align="left" style="margin-right: 10px;"><img align="right" height="180" src=
+            "images/Androsace-chamaejasme.jpg" width="230"></p>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+      </tbody>
+    </table>
+    
     <table>
       <tbody>
         <tr>
@@ -249,6 +283,20 @@
           <td bgcolor="#44AA00" height="200" valign="middle" width="172">
             <p align="left" style="margin-right: 10px;"><font face="Arial" size="5"><img align=
             "right" height="386" src="images/Daphne-hendersonii.jpg" width="300"></font></p>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <table>
+      <tbody>
+        <tr>
+          <td bgcolor="#44AA00" height="200" valign="middle" width="233">
+            <p align="right" style="margin-left: 10px;"><img align="left" height="258" src=
+            "images/Daphne-jasminea.jpg" width="300"></p>
+          </td>
+          <td bgcolor="#44AA00" height="200" valign="middle" width="267">
+            <p align="center" style="margin-right: 10px;"><font face="Arial" size="3">Daphne
+            jasminea aus Griechenland ist leider in Deutschland nicht zuverlässig winterhart..</font></p>
           </td>
         </tr>
       </tbody>
