--- a/androsace_und_daphne.html
+++ b/androsace_und_daphne.html
@@ -55,7 +55,7 @@
           </td>
           <td bgcolor="#44AA00" height="200" valign="middle" width="184">
             <p align="left" style="margin-right: 10px;"><img align="right" height="170" src=
-            "images/Androsace-leichtlinii.jpg" width="230"></p>
+            "images/Androsace-leichtlinii.JPG" width="230"></p>
           </td>
         </tr>
       </tbody>
@@ -117,10 +117,10 @@
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="200">
             <p align="right" style="margin-left: 10px;"><img align="left" height="190" src=
-            "images/Androsace-brigantiaca6.jpg" width="230"></p>
+            "images/Androsace-brigantiaca6.JPG" width="230"></p>
           </td>
           <td bgcolor="#44AA00" height="200" valign="middle" width="250">
-            <p align="center"><font face="Arial" size="2">Androsace carnea ssp. brigantiaca komt in den 
+            <p align="center"><font face="Arial" size="2">Androsace carnea ssp. brigantiaca (links) kommt in den 
             Südwestalpen vor und meidet Kalk. Androsace mathildae dagegen wächst in den
             Abruzzen auf Kalk.</font></p>
           </td>
@@ -132,7 +132,7 @@
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="316">
-            <p align="center" style="margin-left: 10px;"><font face="Arial" size="3">Androsace
+            <p align="center" style="margin-left: 10px;"><font face="Arial" size="3">Androsace chamaejasme
             hat ein weites Verbreitungsgebiet von den Pyrenäen bis zum Himalaja. Wächst meist auf Kalk.</font></p>
           </td>
           <td bgcolor="#44AA00" height="200" valign="middle" width="184">
