--- a/androsace_und_daphne.html
+++ b/androsace_und_daphne.html
@@ -296,7 +296,8 @@
           </td>
           <td bgcolor="#44AA00" height="200" valign="middle" width="267">
             <p align="center" style="margin-right: 10px;"><font face="Arial" size="3">Daphne
-            jasminea aus Griechenland ist leider in Deutschland nicht zuverlässig winterhart..</font></p>
+            jasminea aus Griechenland ist leider in Deutschland nicht zuverlässig winterhart.Es gibt
+            2 Typen. Der niedrig bleibende "Delphi"-Typ ist erheblich schöner als der hohe.</font></p>
           </td>
         </tr>
       </tbody>
