--- a/linksammlung.html
+++ b/linksammlung.html
@@ -17,7 +17,7 @@
   <div class="text">
 <h3>Hier gibt es Links zu allen möglichen Themen rund um den Garten</h3>
 <p><a href="http://www.gds-staudenfreunde.de/">www.gds-staudenfreunde.de</a>&nbsp;&nbsp;Gesellschaft der Staudenfreunde</p>
-<p><a href="http://www.gdsforum.gds-staudenfreunde.de/">www.gdsforum.gds-staudenfreunde.de</a>&nbsp;&nbsp;Forum der Staudenfreunde</p>
+<p><a href="http://gdsforum.gds-staudenfreunde.de/">gdsforum.gds-staudenfreunde.de</a>&nbsp;&nbsp;Forum der Staudenfreunde</p>
 <p><a href="https://www.jardinalpindulautaret.fr/">www.jardinalpindulautaret.fr</a>&nbsp;&nbsp;botanischer Garten der Universität Grenoble</p>
 <p><a href="http://www.semperhorst.de/">www.semperhorst.de</a>&nbsp;&nbsp;Pflanzenliebhaber; alles über Sempervivum</p>
 <p><a href="http://www.gartentechnik.de/">www.gartentechnik.de</a>&nbsp;&nbsp;Linksammlung, Branchenbuch, Organisationen usw.</p>
