--- a/Tipsneu.html
+++ b/Tipsneu.html
@@ -362,7 +362,7 @@
     </p>
   </div>
   <div class="backlink">
-    <p><a href="index.html">zurück zur Startseite</a></p>
+    <p><a href="index.html">zurück zur Startseite und Datenschutzerklärung</a></p>
   </div>
 </body>
 </html>
