--- a/Zistrosen.html
+++ b/Zistrosen.html
@@ -196,7 +196,7 @@
         </tbody>
       </table>
   <div class="backlink">
-    <p><a href="index.html">zurück zur Startseite</a></p>
+    <p><a href="index.html">zurück zur Startseite und Datenschutzerklärung</a></p>
     <p><a href="Fotostartseiteneu.html">zurück zur Fotoübersicht</a></p>
   </div>
 </body>
