--- a/linksammlung.html
+++ b/linksammlung.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="backlink">
-    <p><a href="index.html">zurück zur Startseite</a></p>
+    <p><a href="index.html">zurück zur Startseite und Datenschutzerklärung</a></p>
   </div>
   <div class="text">
 <h3>Hier gibt es Links zu allen möglichen Themen rund um den Garten</h3>
