--- a/Fotostartseiteneu.html
+++ b/Fotostartseiteneu.html
@@ -124,7 +124,7 @@
       </tbody>
     </table>
   <div class="backlink">
-    <p><a href="index.html">zurück zur Startseite</a></p>
+    <p><a href="index.html">zurück zur Startseite und Datenschutzerklärung</a></p>
   </div>
 </body>
 </html>
