--- a/androsace_und_daphne.html
+++ b/androsace_und_daphne.html
@@ -304,7 +304,7 @@
     </table>
     <table></table>
   <div class="backlink">
-    <p><a href="index.html">zurück zur Startseite</a></p>
+    <p><a href="index.html">zurück zur Startseite und Datenschutzerklärung</a></p>
     <p><a href="Fotostartseiteneu.html">zurück zur Fotoübersicht</a></p>
   </div>
 </body>
