--- a/preisliste.html
+++ b/preisliste.html
@@ -71,7 +71,7 @@
   </form>
   </div>
   <div class="backlink">
-    <p><a href="index.html">zurück zur Startseite</a></p>
+    <p><a href="index.html">zurück zur Startseite und Datenschutzerklärung</a></p>
   </div>
 </body>
 </html>
