--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <td class="green1" colspan="2">
         <p>Willkommen auf meiner Homepage!</p>
         <p>Als begeisterter Hobbygärtner möchte ich Ihnen hier ein paar Einblicke in meinen Garten geben. Mein besonderes Interesse gilt seit vielen Jahren den Steingartenpflanzen, aber in meinem Garten ist auch für zahlreiche Stauden, Rosen, Sommerblumen, Gemüse und Obstgehölze Platz, in meinem Gewächshaus dürfen Orchideen ihre Pracht entfalten.</p>
-        <p>Im Hauptberuf bin ich übrigens Zahnarzt, verheiratat, und habe 2 Kinder. Mein Garten liegt in Bonn, allerdings nicht im Rheintal, sondern in etwas weniger mildem Klima in 140m Höhe am Stadtrand. Mein Name: Dr. Christoph Rohlfs</p>
-        <p>Androsace, Campanula, Canarina, Cistus, Daphne, Dianthus, Gentiana, Haberlea, Penstemon, Primula, Ramonda ... und viele andere Pflanzengattungen, insbesondere Raritäten finden Sie in meinem Garten.</p>
+        <p>Im Hauptberuf warich übrigens Zahnarzt, verheiratat, und habe 2 erwachsene Kinder. Mein Garten liegt in Bonn, allerdings nicht im Rheintal, sondern in etwas weniger mildem Klima in 140m Höhe am Stadtrand. Mein Name: Christoph Rohlfs</p>
+       
       </td>
     </tr>
     <tr>
