--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </tr>
     <tr>
       <td class="green3 center kachel">
-        <a class="big" href="Kontaktneu.html">Kontakt, Impressum, Datenschutz</a>
+        <a class="big" href="Kontaktneu.html">Kontakt, Impressum</a>
       </td>
       <td class="green2 center kachel">
         <a class="big" href="preisliste.html">Bestellung</a>
@@ -56,6 +56,16 @@
         <a class="big" href="linksammlung.html">Linksammlung</a>
       </td>
     </tr>
+    <tr><td class="green5 center" style="height: 100px;" colspan="2">
+        <a class="big" href="linksammlung.html">Datenschutz/a>
+        <p>Aufgrund der Datenschutzgrundverordnung (DSGVO) weise ich darauf hin, dass ich beim Besuch meiner Homepage keine persönlichen oder 
+           personifizierbaren Daten erhebe. Insbesondere werden meinerseits keine Log-Files, Client-seitig keine Cokies 
+           erstellt. Dienste von Drittanbietern wie Google-maps wurden entfernt. Der Web-Hoster erstellt jedoch Logdateien, auf 
+           die ich keinen Zugriff habe.</p>
+      </td>
+      </tr>
+    
+    
   </tbody></table>
 </body>
 </html>
