--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <tr><td class="green3 center" style="height: 100px;" colspan="2">
         <a class="big" href="linksammlung.html">Datenschutz</a>
         <p>Aufgrund der Datenschutzgrundverordnung (DSGVO) weise ich darauf hin, dass ich beim Besuch meiner Homepage keine persönlichen oder 
-           personifizierbaren Daten erhebe. Insbesondere werden meinerseits keine Log-Files, Client-seitig keine Cokies 
+           personifizierbaren Daten erhebe. Insbesondere werden meinerseits keine Log-Files, Client-seitig keine Cookies 
            erstellt. Dienste von Drittanbietern wie Google-maps wurden entfernt. Der Web-Hoster erstellt jedoch Logdateien, auf 
            die ich keinen Zugriff habe.</p>
       </td>
