--- a/preisliste.html
+++ b/preisliste.html
@@ -18,57 +18,17 @@
   <div class="backlink">
     <p><a href="index.html">zurück zur Startseite</a></p>
   </div>
-  <div class="text">
-  <h3>Hier ist meine aktuelle Preisliste.</h3>
-  <p>Letzte Aktualisierung am 20.5.2018.</p>
+  <div class="text">  
   <p>Als engagierter Hobbygärtner habe ich bei der Vermehrung für den eigenen Bedarf immer wieder
   Pflanzen übrig, die ich auf diesem Wege anderen Interessenten zugänglich machen möchte, zumal es
   sich oft um echte Raritäten handelt, die sonst nur unter Schwierigkeiten oder zu hohen Preisen zu
   bekommen sind. Natürlich habe ich nicht unbegrenzte Mengen von jeder Sorte und bitte deshalb um
   Verständnis, wenn ich das eine oder andere nicht liefern kann. Andererseits habe ich außerhalb
-  dieser Liste noch etwa 800 andere Arten und Sorten (fast nur Steingartenpflanzen, so gut wie
+  dieser Liste noch über 1000 andere Arten und Sorten (fast nur Steingartenpflanzen, so gut wie
   keine Prachtstauden), von denen ich einzelne Exemplare abgeben kann. Bitte rufen Sie mich
   (abends) an, wenn Sie irgend etwas suchen oder schicken Sie mir eine e- mail. Es handelt sich um
   kleine 1-2jährige Jungpflanzen im Topf oder mit Ballen, auf jeden Fall gut bewurzelt, aber meist
-  kleiner als aus der Gärtnerei gewohnt.</p>
-  <p>Im Hauptberuf bin ich übrigens Zahnarzt, verheiratat, 2 Kinder. Mein Garten liegt in Bonn,
-  allerdings nicht im Rheintal, sondern in etwas weniger mildem Klima in 140m Höhe am
-  Stadtrand.</p>
-  <p>Sie können die Preisliste <a href="preisliste.xls">hier</a>&nbsp;als EXCEL-Datei downloaden
-  und ausdrucken oder das Formular online ausfüllen und abschicken(Leider geht dies nicht mehr,
-  wenn sie Windows NT oder XP als Betriebssystem haben. In diesem Fall bitte e-mail schicken. Die
-  Lieferung erfolgt per Postpaket. Leider sind nicht immer alle Pflanzen vorhanden. Die Portokosten
-  werden in der tatsächlich angefallenen Höhe in Rechnung gestellt.</p>
-  <form action="mailto:rohlfs.bonn@freenet.de" enctype="text/plain" method="post">
-    <table>
-      <tr>
-        <td>Name</td>
-        <td><input maxlength="60" name="Name" size="60"></td>
-      </tr>
-      <tr>
-        <td>Stra&szlig;e</td>
-        <td><input maxlength="60" name="Strasse" size="60"></td>
-      </tr>
-      <tr>
-        <td>PLZ&nbsp;/&nbsp;Ort</td>
-        <td><input maxlength="60" name="Postleitzahl/Ort" size="60"></td>
-      </tr>
-      <tr>
-        <td>e-Mailadresse</td>
-        <td><input maxlength="60" name="e-Mailadresse" size="60"></td>
-      </tr>
-      <tr>
-        <td>gewünschter Liefertermin</td>
-        <td><input maxlength="60" name="Liefertermin" size="60"></td>
-      </tr>
-      <tr>
-        <td valign="top">Besondere Wünsche</td>
-        <td>
-        <textarea cols="60" name="Sonderwunsch" rows="5" wrap="physical"></textarea></td>
-      </tr>
-    </table><br>
-    <input type="submit" value="Absenden"> <input type="reset" value="Abbrechen">
-  </form>
+  kleiner als aus der Gärtnerei gewohnt.</p>  
   </div>
   <div class="backlink">
     <p><a href="index.html">zurück zur Startseite und Datenschutzerklärung</a></p>
