--- a/preisliste.html
+++ b/preisliste.html
@@ -20,15 +20,12 @@
   </div>
   <div class="text">  
   <p>Als engagierter Hobbygärtner habe ich bei der Vermehrung für den eigenen Bedarf immer wieder
-  Pflanzen übrig, die ich auf diesem Wege anderen Interessenten zugänglich machen möchte, zumal es
+  Pflanzen übrig, die ich anderen Interessenten zugänglich machen möchte, zumal es
   sich oft um echte Raritäten handelt, die sonst nur unter Schwierigkeiten oder zu hohen Preisen zu
-  bekommen sind. Natürlich habe ich nicht unbegrenzte Mengen von jeder Sorte und bitte deshalb um
-  Verständnis, wenn ich das eine oder andere nicht liefern kann. Andererseits habe ich außerhalb
-  dieser Liste noch über 1000 andere Arten und Sorten (fast nur Steingartenpflanzen, so gut wie
-  keine Prachtstauden), von denen ich einzelne Exemplare abgeben kann. Bitte rufen Sie mich
-  (abends) an, wenn Sie irgend etwas suchen oder schicken Sie mir eine e- mail. Es handelt sich um
-  kleine 1-2jährige Jungpflanzen im Topf oder mit Ballen, auf jeden Fall gut bewurzelt, aber meist
-  kleiner als aus der Gärtnerei gewohnt.</p>  
+  bekommen sind. Natürlich habe ich nicht unbegrenzte Mengen von jeder Sorte und meist handelt es sich um
+  kleine, aber bewurzelte Pflanzen. Fragen Sie einfach telefonisch (abends) oder per email an.
+
+  </p>  
   </div>
   <div class="backlink">
     <p><a href="index.html">zurück zur Startseite und Datenschutzerklärung</a></p>
