--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <a class="big" href="Kontaktneu.html">Kontakt, Impressum</a>
       </td>
       <td class="green2 center kachel">
-        <a class="big" href="preisliste.html">Bestellung</a>
-        <p>Brauchen Sie noch Steingartenpflanzen für Ihren eigenen Garten? Ich habe immer wieder Pflanzen übrig. Hier geht&#8217;s zur Liste und zum Bestellformular</p>
+        <a class="big" href="preisliste.html">Pflanzenwünsche</a>
+        <p>Brauchen Sie noch Steingartenpflanzen für Ihren eigenen Garten? Ich habe immer wieder Pflanzen übrig. Fragen Sie mich einfach.</p>
       </td>
     </tr>
     <tr>
